@@ -1,1 +1,6 @@
 # Projet1
+
+note :
+to run from the command line on linux
+cd Projet1
+java -classpath /home/my_username/eclipse-workspace/Projet1/bin --module-path /opt/javafx-sdk-11.0.2/lib --add-modules javafx.controls,javafx.fxml main.java.ihm.MainApp
